# project-scam

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
nix/: package.nix  shell.nix
src/: iced_launch.rs  main.rs
src/objects/: custom_gui.rs  game_data.rs  mod.rs
src/styles/: borders.rs  buttons.rs  mod.rs  other.rs
src/views/: level1 copy 3.rs  level1.rs  levels_menu.rs  mailbox.rs  main_menu.rs  message_quest.rs  mod.rs  quiz.rs
