[package]
name = "project-scam"
version = "0.1.0"
edition = "2024"

[dependencies]

iced = { version = "0.13.1" , features = [
	"tokio",
	"svg",
    "canvas",
    "advanced",
    "debug",
]}

clap = { version = "4.5.34", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
once_cell = "1.21.3"